--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -5,9 +5,8 @@
             <ul class.bind="topnavCss">
                 <li class="brand">
                     <a route-href="route: home" class="brand-logo">
-                        <img src="content/home/birthday.png" class="logo-hat" alt="Happy Birthday, Nakama Network!" />
                         ${router.title}
-                        <span class="beta">1 year!</span>
+                        <span class="beta">BETA</span>
                     </a>
                 </li>
                 <li repeat.for="nav of authorizedRoutes">
