--- a/Source/TreasureGuide.Web/src/custom-elements/unit-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-search.html
@@ -14,6 +14,7 @@
                            class="_width100"
                            placeholder="Luffy..."
                            focus="true"
+                           element.ref="inputBox"
                            value.two-way="term & debounce" />
                 </div>
                 <div class="col m5">
