Fixing search issue.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -70,7 +70,7 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <label for="globalCheckbox">
+                                <label for="supportCheckbox">
                                     <input id="supportCheckbox" type="checkbox" checked.bind="excludeSupports" />
                                     <span class="-label-body"> Exclude Support Units</span>
                                 </label>
