Adding flag display.

--- a/Source/TreasureGuide.Web/src/custom-elements/displays/flag-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/flag-display.html
@@ -15,6 +15,11 @@
             <i class="fa fa-usd fa-stack-1x _whiteText"></i>
             <i class="fa fa-ban fa-stack-2x"></i>
         </div>
+        <div class="fa-stack" if.bind="team.hasSupports" title="Has Support Units">
+            <i class="fa fa-circle fa-stack-2x _infoLightText"></i>
+            <i class="fa fa-handshake-o fa-stack-1x"></i>
+            <i class="fa fa-circle-o fa-stack-2x"></i>
+        </div>
         <div class="fa-stack" if.bind="team.hasVideos" title="Has Videos">
             <i class="fa fa-circle fa-stack-2x _infoLightText"></i>
             <i class="fa fa-video-camera fa-stack-1x"></i>
